@@ -6,6 +6,7 @@ Revision history for Perl application Lstu
 	- Use CHI for cache system
 	- Move some tasks to recurring instead of being in after_dispatch hook
 	- Allow to install only deps related to one DB instead of all supported DBs
+	- Use Mojo::SQLite instead of ORLite
 	- Better CI
 	- Put documentation on the wiki (https://framagit.org/luc/lstu/wikis/home)
 	- Update dependencies
